# Trash

./: build.zig
rust/: Cargo.toml  build.rs
rust/src/: main.rs
rust/src/asm/: aarch64-apple-darwin-sys.s  sys.s
zig/: build.zig.zon
zig/src/: main.zig
